<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/background_light"
    android:padding="@dimen/space_16"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include layout="@layout/include_screen_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_12"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_12"
            android:text="@string/family_sync_intro"
            style="@style/Text.MyBudget.Subtitle"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_8"
            android:text="@string/family_sync_step1"
            style="@style/Text.MyBudget.Section"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/familySyncParticipantsBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_16"
            android:text="@string/family_sync_open_participants"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_8"
            android:text="@string/family_sync_step2"
            style="@style/Text.MyBudget.Section"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/familySyncWebDavBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_16"
            android:text="@string/family_sync_open_webdav"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_8"
            android:text="@string/family_sync_step3"
            style="@style/Text.MyBudget.Section"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_16"
            android:text="@string/family_sync_step3_hint"
            style="@style/Text.MyBudget.Subtitle"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_8"
            android:text="@string/family_sync_step4"
            style="@style/Text.MyBudget.Section"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/family_sync_step4_hint"
            style="@style/Text.MyBudget.Subtitle"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
