<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="@dimen/space_20"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:textSize="13sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/utility_template_line_name"
        style="@style/Text.MyBudget.Subtitle"/>
    <EditText
        android:textColor="@color/text_primary"
        android:id="@+id/lineNameInput"
        android:background="@drawable/edittext_border"
        android:padding="@dimen/space_8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_4"
        android:hint="@string/utility_template_line_name_hint"
        android:inputType="text"/>
    <TextView
        android:textSize="13sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_12"
        android:text="@string/utility_template_group_label"
        style="@style/Text.MyBudget.Subtitle"/>
    <EditText
        android:textColor="@color/text_primary"
        android:id="@+id/lineGroupInput"
        android:background="@drawable/edittext_border"
        android:padding="@dimen/space_8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_4"
        android:hint="@string/utility_template_group_hint"
        android:inputType="text"/>
    <TextView
        android:textSize="13sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_12"
        android:text="@string/utility_template_line_type"
        style="@style/Text.MyBudget.Subtitle"/>
    <Spinner
        android:id="@+id/lineTypeSpinner"
        android:padding="@dimen/space_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_4"/>
</LinearLayout>
