<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:padding="@dimen/space_16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/income_plan_field_name"
            style="@style/Text.MyBudget.Subtitle"/>
        <EditText
            android:id="@+id/incomeSourceNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_12"
            android:hint="@string/income_plan_field_name_hint"
            android:inputType="textCapSentences"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/income_plan_field_amount"
            style="@style/Text.MyBudget.Subtitle"/>
        <EditText
            android:id="@+id/incomeSourceAmountInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_12"
            android:hint="0"
            android:inputType="numberDecimal"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/income_plan_field_type"
            style="@style/Text.MyBudget.Subtitle"/>
        <Spinner
            android:id="@+id/incomeSourceTypeSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_12"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/income_plan_field_day"
            style="@style/Text.MyBudget.Subtitle"/>
        <Spinner
            android:id="@+id/incomeSourceDaySpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</ScrollView>
